--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.3.3",
+        "paragonie/random_compat": "~1.0"
     },
     "autoload": {
         "psr-4": { "Symfony\\Polyfill\\Php70\\": "" },
