--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "symfony/polyfill-php70",
-    "type": "library",
+    "type": "metapackage",
     "description": "Symfony polyfill backporting some PHP 7.0+ features to lower PHP versions",
     "keywords": ["polyfill", "shim", "compatibility", "portable"],
     "homepage": "https://symfony.com",
@@ -16,18 +16,12 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
-        "paragonie/random_compat": "~1.0|~2.0|~9.99"
-    },
-    "autoload": {
-        "psr-4": { "Symfony\\Polyfill\\Php70\\": "" },
-        "files": [ "bootstrap.php" ],
-        "classmap": [ "Resources/stubs" ]
+        "php": ">=7.1"
     },
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-main": "1.19-dev"
+            "dev-main": "1.20-dev"
         },
         "thanks": {
             "name": "symfony/polyfill",
